--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Atchutchi</title>
 </head>
 <body>
     <header>
         <div class="row">
-            <a href="index.html" class="md-col-4 logo"></a>
-            <div class="md-col-8">
-
+            <a class="col-md-4 logo" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Atchutchi Ferreira</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -24,6 +29,7 @@
     <footer>
         
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     
 </body>
 </html>
