Filling in the footer content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Atchutchi Ferreira</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h2 class="title"> Systems Engineer Specialist | Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -46,15 +46,63 @@
 
     </section>
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    I am a Dynamic Product Developer and the Head of Systems at ARN,
+                    also serving as CEO of Abiptom Sarl. Skilled in HTML, CSS, JavaScript,
+                    and data visualization techniques, I specialize in creating innovative,
+                    user-friendly digital solutions. My experience in leadership, strategic
+                    planning, and project management strengthens my ability to deliver
+                    timeline products that effectively communicate complex information,
+                    enhancing the mission of any organization.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
+                <p class="inline-block">
+                    Need a printable version of my CV? Download it here.
+                    <a href="#" target="_blank" class="cv-pdf">
+                        <i class="fa fa-download" aria-hidden="true"></i>
+                        <span class="sr-only">Download link.</span>
+                    </a>
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Intagram</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         
