--- a/index.html
+++ b/index.html
@@ -50,6 +50,57 @@
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I am a Dynamic Product Developer and the Head of Systems at ARN,
+                                    also serving as CEO of Abiptom Sarl. Skilled in HTML, CSS, JavaScript,
+                                    and data visualization techniques, I specialize in creating innovative,
+                                    user-friendly digital solutions. My experience in leadership, strategic
+                                    planning, and project management strengthens my ability to deliver
+                                    timeline products that effectively communicate complex information,
+                                    enhancing the mission of any organization.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I know that the aesthetics of effective 
+                                    design combined with application speed, security and reliability combine to
+                                    create a great user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me??</h4>
+                                <p>
+                                    I work quickly and effectively in getting things built and working across the 
+                                    stack. I'm an excellent communicator who thrives in bright and enthusiastic teams 
+                                    and I'm also a self starter when working solo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
