--- a/index.html
+++ b/index.html
@@ -43,7 +43,64 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Atchutchi Ferreira
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Bairro de Ajuda, Bissau, Guinea-Bissau
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            +245 966 994 783
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Email:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            ferreira.atchutchi@gmail.com 
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
@@ -59,13 +116,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I am a Dynamic Product Developer and the Head of Systems at ARN,
-                                    also serving as CEO of Abiptom Sarl. Skilled in HTML, CSS, JavaScript,
-                                    and data visualization techniques, I specialize in creating innovative,
-                                    user-friendly digital solutions. My experience in leadership, strategic
-                                    planning, and project management strengthens my ability to deliver
-                                    timeline products that effectively communicate complex information,
-                                    enhancing the mission of any organization.
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -78,9 +129,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective 
-                                    design combined with application speed, security and reliability combine to
-                                    create a great user experience.
+                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
                                 </p>
                             </div>
                         </div>
@@ -91,11 +140,9 @@
                                 <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me??</h4>
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the 
-                                    stack. I'm an excellent communicator who thrives in bright and enthusiastic teams 
-                                    and I'm also a self starter when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -103,7 +150,7 @@
                 </div>
             </div>
         </div>
-
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
