Added resume.html content

--- a/resume.html
+++ b/resume.html
@@ -44,13 +44,73 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-hystory section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
                     </div>
+                </div>
+                <div class="history-item">
+                <div class="timeline-item" data-dates="06/2016 - Present">
+                    <h4>
+                        NRA (National Regulatory
+                        Authority for ICT),
+                        Bissau, Guinea-Bissau
+                    </h4>
+                    <p>
+                        Head of Information Systems and Management Department
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="08/2018 - Present">
+                    <h4>
+                        ABIPTOM Sarl, Bissau,
+                        Guinea-Bissau
+                    </h4>
+                    <p>
+                        CEO & Founder
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="02/2018 - 05/2023">
+                    <h4>
+                        First Global Robotics Team
+                        Guinea-Bissau
+                    </h4>
+                    <p>
+                        Coordinator and Mentor
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="02/2016 - 08/2016">
+                    <h4>
+                        Jean Piaget University
+                        Bissau, Guinea-Bissau
+                    </h4>
+                    <p>
+                        Assistant Professor
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="06/2015 - 12/2015">
+                    <h4>
+                        ASECNA (Agency for the
+                        Safety of Air Navigation in
+                        Africa and Madagascar),
+                        Bissau, Guinea-Bissau.
+                    </h4>
+                    <p>
+                        Internship in Billing and Network
+                        Administration.
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="06/2014 - 01/2015">
+                    <h4>Ministry of Justice, Praia,
+                        Cape Verde
+                    </h4>
+                    <p>
+                        Professional Internship: Management
+                        Council and Judicial Information System.
+                    </p>
+                </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
@@ -68,7 +128,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React.
                                 </p>
                             </div>
                         </div>
@@ -81,19 +141,43 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
-                            <span class="progress-type">HTML / HTM5</span>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
                         </div>
                     </div>
                 </div>
