Added content to My Skills

--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,35 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-server" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">IT infrastructure</h4>
+                                <p>
+                                    I'm proficient in Systems Management, leveraging platforms like Windows Server (AD, FS, DNS, Hyper-V) and Cloud Azure. 
+                                    My expertise extends to network configurations, encompassing LAN/WAN/VPN setups, and I'm adept at supervising tools like 
+                                    Nagios and Alfresco ECM | BPM for optimal infrastructure performance.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-image" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Marketing & Graphic Design</h4>
+                                <p>
+                                    I excel in Brand Strategy, harnessing the power of Social Media Marketing and Digital Campaigns. 
+                                    My creative flair shines in Graphic Design, where I craft compelling visuals using tools like Adobe Suite, 
+                                    ensuring cohesive branding and impactful communication across platforms.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row progress-section">
                     <div class="col">
